--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,34 @@
 plugins {
-    id 'war'
-    id 'org.springframework.boot' version '2.7.5'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'org.gretty' version '3.0.9'
 }
+apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'idea'
 
-group 'org.example'
-version '1.0'
+// JDK 11
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:20.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'javax.servlet:jstl:1.2'
+    implementation 'org.springframework:spring-webmvc:5.2.22.RELEASE'
+    implementation 'org.webjars:bootstrap:5.2.0'
     implementation("mysql:mysql-connector-java:8.0.15")
-    implementation 'javax.servlet:javax.servlet-api:4.0.0'
-    // https://mvnrepository.com/artifact/javax.servlet/jstl
-    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-    implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.2.1'
-    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    // https://mvnrepository.com/artifact/org.springframework/spring-web
-    // implementation group: 'org.springframework', name: 'spring-web', version: '4.3.11.RELEASE'
-    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-     implementation group: 'org.springframework', name: 'spring-webmvc', version: '6.0.5'
-
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok'
-    // testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.springframework:spring-test:5.2.22.RELEASE'
+    testImplementation 'org.hamcrest:hamcrest-core:2.2'
 }
 
-
-war {
-    webAppDirectory = file('src/main/webapp')
+gretty {
+    httpPort = 8080
+    contextPath = '/'
+    //servletContainer = 'jetty9.4'
+    servletContainer = 'tomcat9'
 }
 
 test {
