--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,12 @@ repositories {
 dependencies {
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'javax.servlet:jstl:1.2'
-    implementation 'org.springframework:spring-webmvc:5.2.22.RELEASE'
+    implementation 'org.springframework:spring-webmvc:4.0.1.RELEASE'
     implementation 'org.webjars:bootstrap:5.2.0'
     implementation("mysql:mysql-connector-java:8.0.15")
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '4.3.22.RELEASE'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation 'org.springframework:spring-test:5.2.22.RELEASE'
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
