--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,23 @@ dependencies {
     implementation("mysql:mysql-connector-java:8.0.15")
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
     implementation group: 'org.springframework', name: 'spring-jdbc', version: '4.3.22.RELEASE'
-
+    // https://mvnrepository.com/artifact/javax.validation/validation-api
+    implementation group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '5.1.3.Final'
+    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation 'org.springframework:spring-test:5.2.22.RELEASE'
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
 }
 
 gretty {
-    httpPort = 8080
+    httpPort = 8084
     contextPath = '/'
     //servletContainer = 'jetty9.4'
     servletContainer = 'tomcat9'
